--- a/products/templates/productdetail.html
+++ b/products/templates/productdetail.html
@@ -5,8 +5,13 @@
 {% endblock head_js %}
 {% block content %}
 
+<!--  outer wrapper -->
 <div class="product-wrapper vac ha">
+
+    <!-- page headline -->
     <div class="page-headline ha">Product details</div>
+
+    <!-- product details card -->
     <div class="productcard display panel panel-default">
         <div class="panel-body">
 
