--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -7,9 +7,11 @@
 
 {% block content %}
 
+<!-- outer wrapper -->
+
 <div class="profile-wrapper vac ha">
 
-    <!-- Nav tabs -->
+    <!-- Nav tabs for address and orders -->
     <ul class="nav nav-tabs ha" role="tablist">
         <li role="presentation" class="active"><a class="profile-tabs" href="#address" aria-controls="address"
                 role="tab" data-toggle="tab">Address</a></li>
@@ -18,8 +20,10 @@
     </ul>
 
     <!-- Tab panes for address details and orders -->
+
     <div class="tab-content ha">
-        <!-- Tab panes for address details-->
+
+        <!-- Tab pane for address details-->
 
         <div role="tabpanel" class="tab-pane active tab-address" id="address">
             {% if user_addressform.full_name.value == "" %}
@@ -36,7 +40,8 @@
             </form>
         </div>
 
-        <!-- Tab panes for order details-->
+        <!-- Tab pane for order details-->
+
         <div role="tabpanel" class="tab-pane tab-orders" id="orders">
             <div class="order-container">
                 <div class="orderline-order-header vh">Order number</div>
@@ -53,6 +58,9 @@
                 {% endif %}
             </div>
         </div>
+
     </div>
+
 </div>
+
 {% endblock %}
