--- a/reviews/templates/reviewdetail.html
+++ b/reviews/templates/reviewdetail.html
@@ -5,8 +5,14 @@
 {% endblock head_js %}
 {% block content %}
 
+<!--  outer wrapper -->
+
 <div class="reviews-wrapper vac ha">
+
+    <!--  page headline -->
     <div class="page-headline ha">Review {{review.product.name}}</div>
+
+    <!-- review card -->
     <div class="reviewcard display panel panel-default">
         <div class="panel-body">
             {% if review.image %}
@@ -14,11 +20,16 @@
                 alt="image of {{review.product.name}} review">
             {% endif %}
             <div class="btn-bar-wrapper">
+
+                <!--  check logged in user against author to place edit / delete button  -->
+
                 {% if user.is_authenticated and review.author.id == user.id %}
                 <a class="btn edit-review-btn" href="{% url 'edit_review' review.id %}"><i class="fa fa-edit"
                         title="edit review"></i></a>
                 <div class="btn review-del-req-btn" onclick="showDeletePopup()"><i class="fa fa-trash"
                         title="delete review"></i></div>
+
+                <!-- delete review confirmation popup -->
 
                 <div class="confirm-delete-popup vh">
                     <div class="delete-popup-message ha">Delete Review?</div>
@@ -30,6 +41,7 @@
                 {% endif %}
             </div>
             <div class="review-headline">{{ review.title }} </div>
+            
             <a class="product-headline"
                 href="{% url 'product_detail' review.product.id %}"><b>{{review.product.name}}</b></a>
             <p class="product-description">{{ review.comment }}</p>
