--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -2,16 +2,29 @@
 {% block title %}Reset Password{% endblock %}
 
 {% block content %}
+
+<!--  outer wrapper -->
+
 <div class="password-reset-wrapper vac ha">
+
+    <!-- page headline -->
+
     <div class="page-headline ha">Password reset</div>
 
+    <!--  password reset form -->
+
     <form method="post" class="accountform ha">
+
         <p>Please specify your email address <br> to receive instructions for resetting it.</p>
         <br>
+
+        <!--  csrf token  -->
         <div style="display:none">
             <input type="hidden" value="{{ csrf_token }}" name="csrfmiddlewaretoken">
         </div>
+
         {{ form.email.errors }}
+
         <div class="emailfield-resetform-wrapper ha">
 
             <label id="password-reset-label" for="id_email" class="control-label required-field">E-mail address:</label>
@@ -21,5 +34,6 @@
             </div>
         </div>
     </form>
+    
 </div>
 {% endblock %}
